--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,24 +22,25 @@ android {
 apply plugin: 'com.neenbedankt.android-apt'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
-
-
     compile "com.google.guava:guava:$rootProject.guavaVersion"
     compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
     compile "com.squareup.okhttp:okhttp:$rootProject.okHttpVersion"
-
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflowVersion}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflowVersion}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflowVersion}"
     compile "com.github.Raizlabs.DBFlow:dbflow-sqlcipher:${dbflowVersion}"
-
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.zhy:okhttputils:2.3.9'
     compile 'com.github.tianzhijiexian:logger:1.1.7'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile files('libs/universal-image-loader-1.9.5.jar')
+
+    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
 }
