--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.5.jar')
 
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
+    compile 'com.github.thepacific:adapter:1.0.5'
+    compile 'com.roughike:bottom-bar:1.3.3'
 }
