--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
 
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     compile 'com.github.thepacific:adapter:1.0.5'
-    compile 'com.roughike:bottom-bar:1.3.3'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.0.0'
 }
